# experimental-preflight-sigcheck

./: Anchor.toml  Cargo.toml  README.md
programs/experimental-preflight-sigcheck/: Cargo.toml
programs/experimental-preflight-sigcheck/src/: lib.rs
sigcore/: Cargo.toml
sigcore/src/: main.rs
tests/: experimental-preflight-sigcheck.ts
